--- a/SMS/Components/Pages/Directory.razor
+++ b/SMS/Components/Pages/Directory.razor
@@ -64,9 +64,7 @@
     }
 </style>
 
-<h1 style="text-align: center; margin-bottom: 30px;">功能目录</h1>
-
-<AntDesign.Row Gutter="24" style="justify-content: center;">
+<AntDesign.Row Gutter="24" style="justify-content: center; margin-top: 30px;">
     <AntDesign.Col Xs="24" Sm="12" Md="8">
         <AntDesign.Card Hoverable="true" style="margin-bottom: 24px;">
             <Body>
