--- a/SMS/Components/App.razor
+++ b/SMS/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="_content/AntDesign/css/ant-design-blazor.css" />
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="quickgrid-custom.css" />
     <link rel="stylesheet" href="SMS.styles.css" />
     <HeadOutlet @rendermode="@InteractiveServer" />
     <link rel="icon" type="image/png" href="favicon.png" />
