--- a/SMS/Components/Pages/EnrollmentManagement.razor
+++ b/SMS/Components/Pages/EnrollmentManagement.razor
@@ -109,7 +109,7 @@
                 <AntDesign.Card Bordered="false" style="height: 100%; background: transparent;">
                     <Body>
                         <div class="card-content">
-                            <Icon Type="crown" Theme="@IconThemeType.Outline" 
+                            <Icon Type="contacts" Theme="@IconThemeType.Outline" 
                                   class="management-icon" 
                                   style="color: #fa8c16;" />
                             <h3 style="margin: 0; color: #1f1f1f; font-weight: 600;">管理员选课管理</h3>
